feat: add ProblemHandler
- Implement Create, GetAll, GetByID, Update and Delete endpoints
